Name every Postgres backend for the version it pins; keep the perf test off inmem-fs
PostgresBackend was concrete and instantiable, sitting next to Postgres17Backend
and Postgres18Backend, so a reader had to open it to find out which version it
meant — and the answer was "whichever image you passed". It is now
AbstractPostgresBackend, abstract with a protected constructor, so the only
usable Postgres backends name their version. AbstractPostgresBackend.forImage(...)
keeps arbitrary versions reachable, with the image tag as the backend name so the
version still shows up in every test report.

Adds @ForEachBackend(excludingBackends = ...) and applies it to
EventStorePerformanceTest for inmem-fs: 10.000 appends against a file-backed
store is CI time spent on a throughput number nobody reads, and the correctness
of those appends is covered by the TCK. The invocation is reported as skipped
with the reason rather than silently omitted.

The knob is for cost, not capability — a backend that cannot support a scenario
belongs behind requires = Capability..., which says why in terms of the contract.
TckBackendCoverageTest now fails if a TCK scenario uses excludingBackends at all,
since a compliance scenario that skips a backend proves nothing about it.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01VSMgqSCuhYKKuwBxFmz57e